# mandelgpu

./: CMakeLists.txt  README  README.md  cuda_error.cu  cuda_error.hpp  cuda_gl.cu  cuda_gl.hpp  gl_renderer.cpp  gl_renderer.hpp  image.cpp  image.hpp  kernel.cu  kernel.hpp  mandelgpu.cpp  performance.hpp  vector.cu
